# llm-cost-guardian

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GETTING_STARTED.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_tracking.py  budget_enforcement.py  openai_wrapper.py
src/llm_cost_guardian/: __init__.py  __main__.py  alerts.py  budget.py  cli.py  exporters.py  models.py  tracker.py  wrappers.py
tests/: test_alerts.py  test_budget.py  test_cli.py  test_cli_integration.py  test_cli_stats_forecast.py  test_cli_top.py  test_compare.py  test_edge_cases.py  test_exporters.py  test_markdown_exporter.py  test_models.py  test_register_model.py  test_tags.py  test_tracker.py  test_tracker_filter.py  test_users.py  test_wrappers.py  test_wrappers_extended.py
